fixed scrolling, overlapping, overhauled literally everything, wrote the whole thing from scratch, I love my life so much *eyeroll*

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body {
     background: white;
     font-family: 'Courier New', Courier, monospace;
     scroll-behavior: smooth;
-
 }
 
 canvas {
@@ -38,15 +37,22 @@ canvas {
 .left {
     position:absolute;
     right:50%;
-    padding:10px;
+    /* padding:10px; */
     text-align:right
 }
 
 .right {
     position:absolute;
     left:50%;
-    padding:10px;
-    padding-left:15px;
+    /* padding:10px; */
+    text-align: left;
+}
+
+embed {
+  border-style: solid;
+  border-radius: 5vmin;
+  margin-right: 0.15vw;
+  margin-left: 0.15vw;
 }
 
 ul {
@@ -78,7 +84,6 @@ a {
   transition: transform 1s;
   transform-style: preserve-3d;
   cursor: pointer;
-  position: relative;
 }
 
 .card.is-flipped {
